[gd_scene load_steps=3 format=3 uid="uid://djow8u4pxw5sl"]

[ext_resource type="Script" path="res://src/node/linear_gradient_picker.gd" id="1_6x5uh"]
[ext_resource type="PackedScene" uid="uid://bdyvforlk3gff" path="res://scenes/node/gradient_editor.tscn" id="1_8qxkh"]

[node name="LinearGradientPicker" type="Popup"]
size = Vector2i(350, 760)
visible = true
max_size = Vector2i(350, 32768)
script = ExtResource("1_6x5uh")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(350, 0)
offset_right = 350.0
offset_bottom = 757.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "LINEAR_GRADIENT_START_POINT"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "x: "

[node name="StartX" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "y: "

[node name="StartY" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "LINEAR_GRADIENT_END_POINT"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "x: "

[node name="EndX" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "y: "

[node name="EndY" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="EditButton" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "LINEAR_GRADIENT_EDIT"

[node name="Padding2" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Padding2" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GradientEditor" parent="PanelContainer/VBoxContainer" instance=ExtResource("1_8qxkh")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/StartX" to="." method="_on_start_x_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/StartY" to="." method="_on_start_y_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/EndX" to="." method="_on_end_x_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/EndY" to="." method="_on_end_y_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer3/EditButton" to="." method="_on_edit_button_pressed"]
